# mg-market-maker

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RESEARCH.md  ROADMAP.md  SECURITY.md  TODO.md  docker-compose.yml
crates/agent/: Cargo.toml
crates/agent/src/: app_config.rs  catalog.rs  connector_factory.rs  engine_runner.rs  fail_ladder_walker.rs  graph_replay.rs  lib.rs  main.rs  market_maker_runner.rs  reconnect.rs  registry.rs
crates/agent/tests/: reconcile_lifecycle.rs
crates/backtester/: Cargo.toml
crates/backtester/src/: data.rs  deduplicator.rs  demo_data.rs  fill_model.rs  latency_model.rs  lib.rs  lookahead.rs  paper.rs  queue_model.rs  report.rs  simulator.rs  stress.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs  orderbook.rs  p2_quantile.rs  pair_class.rs  settings.rs  types.rs
crates/control/: Cargo.toml
crates/control/src/: cursor_store.rs  envelope.rs  fail_ladder.rs  identity.rs  in_memory.rs  lease.rs  lib.rs  lkg.rs  messages.rs  seq.rs  tls.rs  transport.rs  ws_transport.rs
crates/controller/: Cargo.toml
crates/controller/src/: approvals.rs  fleet.rs  http.rs  lib.rs  master_key.rs  registry.rs  replay.rs  templates.rs  tunables.rs  vault.rs  ws_accept.rs
crates/controller/src/http/: tests.rs
crates/controller/tests/: auth_matrix.rs  credentials_crud.rs  deploy_http.rs  deployment_telemetry.rs  fleet_http.rs  lease_handshake.rs  reconnect.rs  ws_e2e.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: admin_clients.rs  alerts.rs  auth.rs  builtin_report_job.rs  client_api.rs  client_portal.rs  data_bus.rs  details_store.rs  email.rs  lib.rs  metrics.rs  mica_report.rs  monthly_report.rs  pdf_report.rs  rate_limit.rs  report_export.rs  report_scheduler.rs  server.rs  state.rs  telegram_control.rs  webhooks.rs  websocket.rs
crates/dashboard/src/archive/: bundle.rs  client.rs  mod.rs  shipper.rs
crates/dashboard/src/auth/: tests.rs
crates/dashboard/src/client_api/: tests.rs
crates/dashboard/src/state/: tests.rs
crates/dashboard/tests/: http_handlers_e2e.rs
crates/engine/: Cargo.toml
crates/engine/src/: balance_cache.rs  book_keeper.rs  connector_bundle.rs  health.rs  lib.rs  listing_sniper.rs  market_maker.rs  order_id_map.rs  order_manager.rs  pair_lifecycle.rs  queue_tracker.rs  rebalancer.rs  test_support.rs
crates/engine/src/market_maker/: defensive_layer_integration.rs  driver_event_tests.rs  dual_connector_tests.rs  epic_e_integration.rs  graph_catalog_coverage.rs  graph_source_sanity_tests.rs  paired_unwind_tests.rs  portfolio_tests.rs  signal_wave_2_integration.rs  spread_gate_tests.rs  stage2_track1_integration.rs  stat_arb_integration.rs
crates/engine/src/order_manager/: tests.rs
crates/engine/src/sor/: cost.rs  dispatch.rs  mod.rs  router.rs  trade_rate.rs  venue_state.rs
crates/engine/tests/: chaos.rs  epic_r_e2e.rs  integration.rs
crates/exchange/binance/: Cargo.toml
crates/exchange/binance/src/: auth.rs  classify.rs  connector.rs  futures.rs  (+3 more)
crates/exchange/client/: Cargo.toml
crates/exchange/coinbase-prime-fix/: Cargo.toml
crates/exchange/core/: Cargo.toml
crates/exchange/hyperliquid/: Cargo.toml
crates/hyperopt/: Cargo.toml
crates/hyperopt/src/: calibration.rs  de.rs  lib.rs  loss.rs  metrics.rs  search.rs  space.rs
crates/onchain/: Cargo.toml
crates/onchain/src/: alchemy.rs  cache.rs  etherscan.rs  goldrush.rs  lib.rs  moralis.rs  tracker.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: checkpoint.rs  fill_replay.rs  funding.rs  lib.rs  loan.rs  transfer_log.rs
crates/protocols/ws_rpc/: Cargo.toml
crates/risk/: Cargo.toml
crates/risk/proptest-regressions/: borrow.txt  hedge_optimizer.txt  news_retreat.txt  performance.txt  reconciliation.txt  toxicity.txt
crates/risk/src/: audit.rs  audit_reader.rs  borrow.rs  circuit_breaker.rs  dca.rs  decision_ledger.rs  exposure.rs  foreign_twap.rs  hedge_optimizer.rs  inventory.rs  inventory_drift.rs  kill_switch.rs  lead_lag_guard.rs  lib.rs  liquidation_heatmap.rs  loan_utilization.rs  manipulation.rs  margin_guard.rs  market_impact.rs  news_retreat.rs  order_emulator.rs  otr.rs  per_client_circuit.rs  performance.rs  pnl.rs  portfolio_balance.rs  portfolio_risk.rs  portfolio_var.rs  protections.rs  rebalancer.rs  reconciliation.rs  session_calendar.rs  sla.rs  social_risk.rs  surveillance.rs  toxicity.rs  var_guard.rs  volume_limit.rs
crates/sentiment/: Cargo.toml
crates/sentiment/src/: bot_filter.rs  counter.rs  keyword.rs  lib.rs  ollama.rs  orchestrator.rs  persistence.rs  ticker.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: adapter.rs  config.rs  config.rs.legacy.txt  hyperopt_worker.rs  legacy_standalone.rs.txt  main.rs  metrics.rs  otel.rs.legacy.txt  pair_template.rs  preflight.rs  smoke_test.rs  smoke_test.rs.legacy.txt  validate.rs  validate.rs.legacy.txt
crates/strategy/: Cargo.toml
crates/strategy-graph/: Cargo.toml
crates/strategy-graph/src/: catalog.rs  evaluator.rs  graph.rs  lib.rs  node.rs  storage.rs  templates.rs  trace.rs  types.rs
crates/strategy-graph/templates/: avellaneda-via-graph.json  basis-carry-spot-perp.json  cost-gated-quoter.json  cross-asset-regime.json  cross-exchange-basic.json  funding-aware-quoter.json  glft-via-graph.json  grid-via-graph.json  liquidity-burn-guard.json  major-spot-basic.json  meme-spot-guarded.json  rug-detector-composite.json  xemm-reactive.json
crates/strategy-graph/tests/: pentest_templates_e2e.rs
crates/strategy/benches/: strategy_bench.rs
crates/strategy/src/: ab_split.rs  adaptive.rs  autotune.rs  avellaneda.rs  basis.rs  basis_arb.rs  campaign_orchestrator.rs  cartea_spread.rs  cks_ofi.rs  cross_exchange.rs  exec_algo.rs  exploits.rs  features.rs  funding_arb.rs  funding_arb_driver.rs  glft.rs  grid.rs  ignite.rs  inventory_skew.rs  layer.rs  learned_microprice.rs  lib.rs  mark.rs  market_resilience.rs  momentum.rs  paired_unwind.rs  pump_and_dump.rs  spoof.rs  stuff.rs  trait.rs  twap.rs  volatility.rs  wash.rs  xemm.rs
(+423 files in other folders)
