[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/exchange/core",
    "crates/exchange/client",
    "crates/exchange/binance",
    "crates/exchange/bybit",
    "crates/exchange/hyperliquid",
    "crates/exchange/coinbase-prime-fix",
    "crates/protocols/fix",
    "crates/protocols/ws_rpc",
    "crates/control",
    "crates/controller",
    "crates/agent",
    "crates/hyperopt",
    "crates/indicators",
    "crates/portfolio",
    "crates/strategy",
    "crates/risk",
    "crates/sentiment",
    "crates/onchain",
    "crates/strategy-graph",
    "crates/engine",
    "crates/backtester",
    "crates/dashboard",
    "crates/persistence",
    "crates/server",
]

[workspace.package]
edition = "2021"
version = "0.4.0"

# Clippy lints we silence workspace-wide. Both are style-only
# Rust 1.94 additions whose churn isn't worth the diff: doc
# continuation indentation is a formatting preference we can
# enforce later with rustfmt itself, and field-reassign-with-
# Default fires on any `let mut = default(); x.foo = …` builder
# pattern regardless of readability gain.
[workspace.lints.clippy]
doc_lazy_continuation = "allow"
field_reassign_with_default = "allow"
empty_line_after_doc_comments = "allow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
semver = "1"
futures-util = "0.3"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
axum = { version = "0.8", features = ["json", "ws"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Decimal arithmetic (never f64 for money)
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = { version = "0.13", default-features = false }

# Config
toml = "0.8"
regex = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Internal — published so other workspace crates can depend on
# each other via `{ workspace = true }` instead of relative paths.
mm-sentiment = { path = "crates/sentiment" }

# Errors
anyhow = "1"
thiserror = "2"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Async trait
async-trait = "0.1"

# Crypto auth
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
getrandom = "0.2"
subtle = "2"

# HyperLiquid signing (EIP-712 over secp256k1)
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
rmp-serde = "1"

# Internal crates
mm-common = { path = "crates/common" }
mm-exchange-core = { path = "crates/exchange/core" }
mm-exchange-client = { path = "crates/exchange/client" }
mm-exchange-binance = { path = "crates/exchange/binance" }
mm-exchange-bybit = { path = "crates/exchange/bybit" }
mm-exchange-hyperliquid = { path = "crates/exchange/hyperliquid" }
mm-exchange-coinbase-prime-fix = { path = "crates/exchange/coinbase-prime-fix" }
mm-protocols-fix = { path = "crates/protocols/fix" }
mm-protocols-ws-rpc = { path = "crates/protocols/ws_rpc" }
mm-control = { path = "crates/control" }
mm-controller = { path = "crates/controller" }
mm-agent = { path = "crates/agent" }
mm-hyperopt = { path = "crates/hyperopt" }
mm-indicators = { path = "crates/indicators" }
mm-portfolio = { path = "crates/portfolio" }
mm-strategy = { path = "crates/strategy" }
mm-strategy-graph = { path = "crates/strategy-graph" }
mm-risk = { path = "crates/risk" }
mm-engine = { path = "crates/engine" }
mm-backtester = { path = "crates/backtester" }
mm-dashboard = { path = "crates/dashboard" }
mm-persistence = { path = "crates/persistence" }

[profile.release]
lto = true
codegen-units = 1
strip = true

# Force minimum versions to fix known vulnerabilities.
