[package]
name = "mm-backtester"
edition.workspace = true
version.workspace = true

[dependencies]
mm-common = { workspace = true }
mm-strategy = { workspace = true }
mm-risk = { workspace = true }
tokio = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rand = "0.8"
rand_chacha = "0.3"
