[package]
name = "mm-backtester"
edition.workspace = true
version.workspace = true

[dependencies]
mm-common = { workspace = true }
mm-indicators = { workspace = true }
mm-portfolio = { workspace = true }
mm-risk = { workspace = true }
mm-strategy = { workspace = true }
tokio = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rand = "0.9"
rand_chacha = "0.9"

[[bin]]
name = "mm-probe"
path = "src/bin/mm_probe.rs"

[[bin]]
name = "mm-stress-test"
path = "src/bin/mm_stress_test.rs"
