[package]
name = "mm-dashboard"
edition.workspace = true
version.workspace = true

[dependencies]
mm-common = { workspace = true }
mm-risk = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
prometheus = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
once_cell = "1"
