[package]
name = "mm-engine"
edition.workspace = true
version.workspace = true

[dependencies]
mm-common = { workspace = true }
mm-exchange-client = { workspace = true }
mm-exchange-core = { workspace = true }
mm-strategy = { workspace = true }
mm-risk = { workspace = true }
mm-dashboard = { workspace = true }
mm-portfolio = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
