[package]
name = "mm-hyperopt"
edition.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
rand = "0.9"
rand_chacha = "0.10"

[lints]
workspace = true
