[package]
name = "mm-risk"
edition.workspace = true
version.workspace = true

[dependencies]
mm-common = { workspace = true }
mm-exchange-core = { workspace = true }
mm-persistence = { path = "../persistence" }
# Epic G — SentimentTick type consumed by the
# `SocialRiskEngine`. Pure-types dependency; the collectors /
# Ollama analyzer never leak into this crate.
mm-sentiment = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
# Audit log compression: archived JSONL → .jsonl.gz before
# operators ship it off to S3/GCS cold storage. Gzip is the
# lowest-common-denominator format for log archival (AWS
# Athena, BigQuery external tables, grep-backed greps on an
# ops box all handle it) — we do not reach for the richer zstd
# yet to keep the retention pipeline compatible with stock
# tooling.
flate2 = "1"

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
