[package]
name = "mm-server"
edition.workspace = true
version.workspace = true

[dependencies]
mm-common = { workspace = true }
mm-exchange-client = { workspace = true }
mm-exchange-core = { workspace = true }
mm-exchange-binance = { workspace = true }
mm-exchange-bybit = { workspace = true }
mm-exchange-hyperliquid = { workspace = true }
mm-strategy = { workspace = true }
mm-risk = { workspace = true }
mm-sentiment = { workspace = true }
mm-engine = { workspace = true }
mm-dashboard = { workspace = true }
mm-persistence = { workspace = true }
mm-portfolio = { workspace = true }
mm-backtester = { workspace = true }
mm-hyperopt = { workspace = true }
# Sentry error aggregation — activates only when MM_SENTRY_DSN
# is set at runtime. The sentry crate has no side effects until
# `sentry::init()` is called, so the always-on dep is cheap.
sentry = { version = "0.36", default-features = false, features = ["rustls", "contexts", "panic", "backtrace"] }
sentry-tracing = "0.36"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
time = ">=0.3.47"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
prometheus = { workspace = true }
chrono = { workspace = true }

# OpenTelemetry OTLP tracing — opt-in via `--features otel`. Pulls
# tonic + async runtime glue; keeping it optional holds the default
# build footprint flat. When enabled and `OTEL_EXPORTER_OTLP_ENDPOINT`
# is set, spans flow to the configured collector.
opentelemetry = { version = "0.26", optional = true }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.27", optional = true }

[features]
default = []
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
# Epic E stage-2 — io_uring transport (reserved name only).
# Flipping this flag today does NOT swap the runtime; the
# actual tokio_uring glue is deferred per
# docs/research/io-uring-tradeoffs.md. The name is reserved
# so future PRs touching `crates/exchange/*` transport layer
# can gate their changes under `#[cfg(feature = "io-uring")]`
# without coordinating across crates.
io-uring = []
