[package]
name = "mm-server"
edition.workspace = true
version.workspace = true

[dependencies]
mm-common = { workspace = true }
mm-exchange-client = { workspace = true }
mm-exchange-core = { workspace = true }
mm-exchange-binance = { workspace = true }
mm-exchange-bybit = { workspace = true }
mm-exchange-hyperliquid = { workspace = true }
mm-strategy = { workspace = true }
mm-risk = { workspace = true }
mm-sentiment = { workspace = true }
mm-onchain = { path = "../onchain" }
mm-strategy-graph = { path = "../strategy-graph" }
mm-engine = { workspace = true }
mm-dashboard = { workspace = true }
tower-http = { workspace = true }
axum = { workspace = true }
mm-persistence = { workspace = true }
mm-portfolio = { workspace = true }
mm-backtester = { workspace = true }
mm-hyperopt = { workspace = true }
# Controller library — WS accept loop, fleet state, credential
# push, HTTP endpoints backing the UI's controller views. Loaded
# when server runs in `--mode controller` or `--mode both`.
mm-control = { workspace = true }
mm-controller = { workspace = true }
# Sentry error aggregation — activates only when MM_SENTRY_DSN
# is set at runtime. The sentry crate has no side effects until
# `sentry::init()` is called, so the always-on dep is cheap.
sentry = { version = "0.47", default-features = false, features = ["rustls", "contexts", "panic", "backtrace"] }
sentry-tracing = "0.47"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
time = ">=0.3.47"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
prometheus = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
# Telegram bridge (Fix #6) — POSTs alert messages to Telegram
# bot API. Same client behaviour as mm-dashboard / mm-sentiment
# already use; workspace-pinned reqwest.
reqwest = { workspace = true }

# rustls 0.23 requires an explicit CryptoProvider install at
# process start when multiple providers are in the dep graph
# (aws-smithy brings aws-lc-rs, reqwest might bring ring — the
# panic "Could not automatically determine the process-level
# CryptoProvider" fires without this). Pinning aws-lc-rs here
# and calling `install_default()` in main() resolves the
# ambiguity once, for every crate that uses rustls downstream.
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }

# OpenTelemetry OTLP tracing — opt-in via `--features otel`. Pulls
# tonic + async runtime glue; keeping it optional holds the default
# build footprint flat. When enabled and `OTEL_EXPORTER_OTLP_ENDPOINT`
# is set, spans flow to the configured collector.
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[features]
default = []
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
# Epic E stage-2 — io_uring transport (reserved name only).
# Flipping this flag today does NOT swap the runtime; the
# actual tokio_uring glue is deferred per
# docs/research/io-uring-tradeoffs.md. The name is reserved
# so future PRs touching `crates/exchange/*` transport layer
# can gate their changes under `#[cfg(feature = "io-uring")]`
# without coordinating across crates.
io-uring = []

[lints]
workspace = true
