[package]
name = "mm-strategy"
edition.workspace = true
version.workspace = true

[dependencies]
mm-common = { workspace = true }
mm-exchange-core = { workspace = true }
mm-indicators = { workspace = true }
mm-persistence = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1"

[[bench]]
name = "strategy_bench"
harness = false
